k8s/pre/product-service-db.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo-sts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  serviceName: 'mongo-db'
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo-ctr
          image: mongo:7.0.1
          volumeMounts:
            - mountPath: /data/db
              name: mongo-vol
  volumeClaimTemplates:
    - metadata:
        name: mongo-vol
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: 'mongo-sc'
        resources:
          requests:
            storage: 1Gi
