k8s/pre/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: eureka.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: discovery-server
                port:
                  number: 80
            pathType: Prefix
            path: /
    - host: keycloak.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: keycloak
                port:
                  number: 8080
            pathType: Prefix
            path: /
    - host: admin.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: admin-server
                port:
                  number: 9091
            pathType: Prefix
            path: /
    - host: rabbitmq.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: rabbitmq
                port:
                  number: 15672
            pathType: Prefix
            path: /
    - host: zipkin.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: zipkin
                port:
                  number: 9411
            pathType: Prefix
            path: /
    - host: api.cloud.dev.com
      http:
        paths:
          - backend:
              service:
                name: api-gateway
                port:
                  number: 8082
            pathType: Prefix
            path: /
